<resources>
    <string name="app_name">T-Fit Progress</string>
    <string name="register_name">Registro</string>
    <string name="ejercicios_name">Crear ejercicio</string>
    <string name="show_ejercicios_name">Ejercicio</string>
    <string name="entrenamiento_name">Crear entrenamiento</string>
    <string name="fragmentPerfil">Perfil</string>
    <string name="fragmentDescripcion">Descripción</string>
    <string name="fragmenteCondicion">Evolución</string>
    <string name="fragmentHistorial">Historial</string>
    <string name="calendario_name">Calendario</string>
    <string name="evaluacion_name">Evaluación</string>
    <string name="pruebas_name">Pruebas física</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="sign_in">Iniciar Sesión</string>
    <string name="sinCuenta">¿Aún no estás registrado?</string>
    <string name="olvidarpassword">¿Has olvidado la contraseña?</string>
    <string name="registrate"><u>Regístrate</u></string>
    <string name="restablecer"><u>Restablecer password</u></string>
    <string name="crearCuenta">Crear usuario</string>
    <string name="btnCrearEjerc">Crear ejercicio</string>
    <string name="btnCrearEntren">Crear entrenamiento</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_ejercicios">Ejercicios</string>
    <string name="menu_entrenamientos">Entrenamientos</string>
    <string name="menu_mensajes">Mensajes</string>
    <string name="menu_perfil">Perfil</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="btn_calendario_completo">Mostrar calendario</string>
    <string name="msgRecyclerHome">Sin entrenamientos programados</string>
    <string name="msgRecyclerClientes">Aún no tienes deportistas asignados</string>
    <string name="msgRecyclerEjercicios">No tienes ejercicios almacenados</string>
    <string name="msgRecyclerEntrenamientos">No tienes entrenamientos almacenados</string>
    <string name="msgRecyclerChats">No tienes chats almacenados</string>
    <string name="tvFechaActual">Hoy - %1$s</string>
    <string name="edad">%1$d años</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="m_guardar">Guardar</string>

    <string name="nombre_del_entrenamiento">Nombre del entrenamiento*</string>
    <string name="tipo_de_entrenamiento">Tipo de entrenamiento*</string>
    <string name="descripci_n_del_entrenamiento">Descripción del entrenamiento</string>
    <string name="series">Series*</string>
    <string name="repeticiones">Repeticiones*</string>
    <string name="descanso_seg">Descanso (seg)</string>
    <string name="a_adir_ejercicio">Añadir ejercicio</string>
    <string name="debes_a_adir_alg_n_ejercicio">Debes añadir algún ejercicio</string>
    <string name="guardar_entrenamiento">Guardar entrenamiento</string>
    <string name="guardando_cambios">Guardando cambios …</string>
    <string name="iniciando_sesion">Iniciando sesión …</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="nombre_del_ejercicio">Nombre del ejercicio</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="abrir_galeria">Abrir galeria</string>
    <string name="quitar_imagen">Quitar imagen</string>
    <string name="url_video_youtube">URL video Youtube</string>
    <string name="visualizar_video">Visualizar video</string>
    <string name="grupo_muscular">Grupo muscular</string>
    <string name="tipo_de_ejercicio">Tipo de ejercicio</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="guardar_ejercicio">Guardar ejercicio</string>

    <array name="material_calendar_months_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </array>

    <string name="material_calendar_monday">L</string>
    <string name="material_calendar_tuesday">M</string>
    <string name="material_calendar_wednesday">X</string>
    <string name="material_calendar_thursday">J</string>
    <string name="material_calendar_friday">V</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">D</string>

    <array name="mesesAbrev">
        <item>Ene.</item>
        <item>Feb.</item>
        <item>Mar.</item>
        <item>Abr.</item>
        <item>May.</item>
        <item>Jun.</item>
        <item>Jul.</item>
        <item>Ago.</item>
        <item>Sep.</item>
        <item>Oct.</item>
        <item>Nov.</item>
        <item>Dic.</item>
    </array>

    <array name="diasSemana">
        <item>Domingo</item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
    </array>

    <string name="title_activity_deportista_main">DeportistaMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="descripcion_basica">Cuéntame más sobre tí, por ejemplo: </string>
    <string name="descripcion_basica_extendida">Soy personal administrativo, me considero activo, dispongo de 30min al dia para realizar ejercicio …</string>

    <string name="test_cooper">Resistencia actual: %1$s VO2max (%2$s)</string>
    <string name="test_fuerza">Fuerza actual: %1$s flexiones (%2$s)</string>
    <string name="test_imc">IMC actual: %1$s kg/m2 (%2$s)</string>
    <string name="test_descripcion_imc">Para determinar si una persona está por encima de su peso ideal y le conviene adelgazar, o es demasiado delgada se utiliza el IMC o Índice de Masa Corporal, también conocido como BMI (Body Mass Index) o IQ (Índice de Quetelet). Se trata de una fórmula que nos permite calcular la masa corporal de una persona.</string>
    <string name="test_descripcion_deport_imc">Rellena los siguientes datos para determinar tu Índice de masa corporal (IMC).</string>

    <string name="mostrar_formula">Los resultados se obtienen mediante la siguiente fórmula:</string>
    <string name="mostrar_tabla">Los resultados se interpretan según la siguiente tabla:</string>
    <string name="test_descripcion_deport_fondos">Para determinar el rango de fuerza muscular debes realizar el mayor número de flexiones en 1 minuto.</string>
    <string name="tipo_fondos">Las flexiones o fondos se pueden realizar de dos maneras (más abajo se indica el tipo de flexión que debe utilizar el usuario):</string>
    <string name="test_descripcion_fondos">El test de fuerza determina la resistencia de los músculos de la mitad superior de tu cuerpo tomando como medida la cantidad de flexiones de brazo que puedes realizar en 60 segundos.</string>
    <string name="mas_test_descripcion_fondos">Para obtener los resultados las flexiones se puede realizar de dos maneras: Utilizando el cuerpo entero (deportistas masculinos) o apoyando las rodillas en el suelo (deportistas femeninos).</string>
     <string name="tabla_1_fondos">Interpretación de resultados para flexiones normales:</string>
    <string name="tabla_2_fondos">Interpretación de resultados para flexiones modificadas:</string>
    <string name="test_descripcion_deport_cooper">Para medir el rango de resistencia y el consumo de oxigeno máximo (VO2max), será necesario correr o andar la mayor distancia posible en 12 minutos.</string>
    <string name="test_descripcion_cooper">Este test es una prueba de resistencia que consiste en recorrer la mayor distancia posible calculada en metros a una velocidad constante durante un lapso de 12 minutos. De esta manera, funciona como evaluación de la capacidad aeróbica (VO2 max).</string>
    <string name="mostrar_formula_cooper">El VO2max se obtienen mediante la siguiente fórmula:</string>

</resources>