<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_clientes" />
        <item
            android:id="@+id/nav_ejercicios"
            android:icon="@drawable/ic_fitness_center_black_24dp"
            android:title="@string/menu_ejercicios" />
        <item
            android:id="@+id/nav_entrenamientos"
            android:icon="@drawable/ic_feed_black_24dp"
            android:title="@string/menu_entrenamientos" />
        <item
            android:id="@+id/nav_mensajes"
            android:icon="@drawable/ic_chat_24"
            android:title="@string/menu_mensajes" />
    </group>

</menu>