<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_calendario_deportista"
            android:icon="@drawable/icon_calendar"
            android:title="@string/calendario_name" />
        <item
            android:id="@+id/nav_evaluacion_deportista"
            android:icon="@drawable/prueba"
            android:title="@string/evaluacion_name" />
        <item
            android:id="@+id/nav_mensajes_deportista"
            android:icon="@drawable/icons_chat"
            android:title="@string/menu_mensajes" />
        <item
            android:id="@+id/nav_perfil_deportista"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_perfil" />
    </group>

</menu>