<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.juandecuesta.t_fitprogress.ui_entrenador.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/ent_fragment_home" />

    <fragment
        android:id="@+id/nav_clientes"
        android:name="edu.juandecuesta.t_fitprogress.ui_entrenador.clientes.ClientesFragment"
        android:label="@string/menu_clientes"
        tools:layout="@layout/ent_fragment_clientes" >
    </fragment>
    <fragment
        android:id="@+id/nav_ejercicios"
        android:name="edu.juandecuesta.t_fitprogress.ui_entrenador.ejercicios.EjerciciosFragment"
        android:label="@string/menu_ejercicios"
        tools:layout="@layout/ent_fragment_ejercicios">
    </fragment>
    <fragment
        android:id="@+id/nav_entrenamientos"
        android:name="edu.juandecuesta.t_fitprogress.ui_entrenador.entrenamientos.EntrenamientosFragment"
        android:label="@string/menu_entrenamientos"
        tools:layout="@layout/ent_fragment_entrenamientos" />

    <fragment
        android:id="@+id/nav_evaluacion"
        android:name="edu.juandecuesta.t_fitprogress.ui_entrenador.pruebas_fisicas.PruebasFragment"
        android:label="@string/pruebas_name"
        tools:layout="@layout/ent_fragment_pruebas" />

    <fragment
        android:id="@+id/nav_mensajes"
        android:name="edu.juandecuesta.t_fitprogress.ui_entrenador.mensajes.MensajesFragment"
        android:label="@string/menu_mensajes"
        tools:layout="@layout/fragment_mensajes" />

    <fragment
        android:id="@+id/nav_calendario_deportista"
        android:name="edu.juandecuesta.t_fitprogress.ui_deportista.calendario.CalendarioFragment"
        android:label="@string/calendario_name"
        tools:layout="@layout/dep_fragment_calendario" />

    <fragment
        android:id="@+id/nav_evaluacion_deportista"
        android:name="edu.juandecuesta.t_fitprogress.ui_deportista.evaluacion.EvaluacionFragment"
        android:label="@string/evaluacion_name"
        tools:layout="@layout/fragment_evaluacion" />
    <fragment
        android:id="@+id/nav_mensajes_deportista"
        android:name="edu.juandecuesta.t_fitprogress.ui_deportista.mensajes.MensajesFragment"
        android:label="@string/menu_mensajes"
        tools:layout="@layout/dep_fragment_mensajes" />
    <fragment
        android:id="@+id/nav_perfil_deportista"
        android:name="edu.juandecuesta.t_fitprogress.ui_deportista.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/dep_fragment_perfil" />

</navigation>