<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:backgroundTint="@color/blue_200"

    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="210dp"
        android:layout_height="100dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/t_fit_peque" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewimagendep"
        android:layout_width="115dp"
        android:layout_height="115dp"
        app:cardCornerRadius="100dp"
        android:visibility="gone"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/imageViewDeportista"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@color/mostaza_500"
            app:srcCompat="@drawable/ic_person_white" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvNombreUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/blue_700"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_700"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>