<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_entrenador.entrenamientos.EditEntrenamientoActivity"
    android:background="@color/blue_200">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlNombreEntren"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="Nombre del entrenamiento"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombreEntren"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:gravity="start"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tlTipoEntren"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="Tipo de entrenamiento"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="dropdown_menu"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/ettipoEntren"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:gravity="fill_vertical"
                android:inputType="textAutoComplete"
                android:paddingHorizontal="16dp"
                android:paddingTop="22dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                android:clickable="true"
                android:focusable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlTipoVista"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/tipo_de_entrenamiento"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTipoVista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:gravity="start"
                android:singleLine="true"
                android:focusableInTouchMode="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlDescripc"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/descripci_n_del_entrenamiento"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textAlignment="textStart"
                android:focusableInTouchMode="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlSeries"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="0.25"
                android:hint="@string/series"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSeries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edittext"
                    android:gravity="start"
                    android:inputType="number"
                    android:singleLine="true"
                    android:focusableInTouchMode="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlRep"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:hint="@string/repeticiones"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edittext"
                    android:gravity="start"
                    android:inputType="number"
                    android:singleLine="true"
                    android:focusableInTouchMode="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlDesc"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:hint="@string/descanso_seg"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edittext"
                    android:gravity="start"
                    android:inputType="number"
                    android:singleLine="true"
                    android:focusableInTouchMode="false"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnAddEjerc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#689F38"
            android:text="@string/a_adir_ejercicio"
            app:icon="@android:drawable/ic_input_add"
            app:iconTint="#FFFFFF"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txtMsgAlerta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debes_a_adir_alg_n_ejercicio"
            android:textColor="@color/red"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/lvExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvExercise"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/guardar_cambios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:padding="55dp"
            android:id="@+id/id_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_text_reload"
            android:padding="10dp"
            android:text="@string/guardando_cambios"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>